Removed file that shouldn't be tracked

--- a/WeatherWidget/Base.lproj/MainInterface.storyboard
+++ b/WeatherWidget/Base.lproj/MainInterface.storyboard
@@ -20,11 +20,12 @@
                                 <rect key="frame" x="0.0" y="0.0" width="45" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="45" id="86T-zm-SBq"/>
+                                    <constraint firstAttribute="height" constant="37" id="gcY-fz-dDn"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vBO-R8-Fxp">
                                 <rect key="frame" x="53" y="8" width="267" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
