--- a/WeatherWidget/Base.lproj/MainInterface.storyboard
+++ b/WeatherWidget/Base.lproj/MainInterface.storyboard
@@ -13,31 +13,42 @@
                         <viewControllerLayoutGuide type="bottom" id="FKl-LY-JtV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="37"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xaa-xH-ZmB">
-                                <rect key="frame" x="0.0" y="0.0" width="45" height="37"/>
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="45" id="86T-zm-SBq"/>
-                                    <constraint firstAttribute="height" constant="37" id="gcY-fz-dDn"/>
+                                    <constraint firstAttribute="width" constant="50" id="1ot-6V-bR8"/>
+                                    <constraint firstAttribute="height" constant="50" id="PjL-Tu-AvE"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vBO-R8-Fxp">
-                                <rect key="frame" x="53" y="8" width="267" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="vancouver" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vBO-R8-Fxp">
+                                <rect key="frame" x="53" y="0.0" width="267" height="19"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Wo-jq-FNF">
+                                <rect key="frame" x="53" y="27" width="267" height="21"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="vBO-R8-Fxp" secondAttribute="bottom" constant="8" id="JaD-4R-xg5"/>
-                            <constraint firstItem="vBO-R8-Fxp" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="8" id="KNH-jf-Lb5"/>
-                            <constraint firstAttribute="trailing" secondItem="vBO-R8-Fxp" secondAttribute="trailing" id="KPD-cH-KA7"/>
-                            <constraint firstItem="xaa-xH-ZmB" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" id="hGA-kd-URU"/>
-                            <constraint firstItem="xaa-xH-ZmB" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" id="jtC-s2-wXq"/>
-                            <constraint firstItem="vBO-R8-Fxp" firstAttribute="leading" secondItem="xaa-xH-ZmB" secondAttribute="trailing" constant="8" id="nDY-Zs-TDk"/>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="xaa-xH-ZmB" secondAttribute="bottom" id="sDF-Bd-Kif"/>
+                            <constraint firstItem="vBO-R8-Fxp" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" id="1mj-Qu-yyi"/>
+                            <constraint firstAttribute="trailing" secondItem="vBO-R8-Fxp" secondAttribute="trailing" id="DlE-ZL-QoR"/>
+                            <constraint firstAttribute="bottom" secondItem="3Wo-jq-FNF" secondAttribute="bottom" constant="2" id="Kf4-pS-BQi"/>
+                            <constraint firstItem="xaa-xH-ZmB" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" id="MGU-v4-P0c"/>
+                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="xaa-xH-ZmB" secondAttribute="bottom" id="SmU-il-fvW"/>
+                            <constraint firstItem="3Wo-jq-FNF" firstAttribute="leading" secondItem="xaa-xH-ZmB" secondAttribute="trailing" constant="3" id="Stj-dl-VxF"/>
+                            <constraint firstItem="vBO-R8-Fxp" firstAttribute="leading" secondItem="xaa-xH-ZmB" secondAttribute="trailing" constant="3" id="VVE-UA-RSV"/>
+                            <constraint firstAttribute="trailing" secondItem="3Wo-jq-FNF" secondAttribute="trailing" id="Vnw-EC-GxQ"/>
+                            <constraint firstItem="3Wo-jq-FNF" firstAttribute="top" secondItem="vBO-R8-Fxp" secondAttribute="bottom" constant="8" id="aTJ-Vo-3EK"/>
+                            <constraint firstItem="3Wo-jq-FNF" firstAttribute="top" secondItem="vBO-R8-Fxp" secondAttribute="bottom" constant="8" id="cOL-aE-Z7L"/>
+                            <constraint firstItem="xaa-xH-ZmB" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" id="csn-BG-9YW"/>
+                            <constraint firstItem="xaa-xH-ZmB" firstAttribute="centerY" secondItem="S3S-Oj-5AN" secondAttribute="centerY" id="mdw-h3-Ibg"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
@@ -45,15 +56,16 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="37"/>
+                    <size key="freeformSize" width="320" height="50"/>
                     <connections>
+                        <outlet property="conditionLabel" destination="3Wo-jq-FNF" id="QGW-kv-5ap"/>
                         <outlet property="iconImageView" destination="xaa-xH-ZmB" id="qIw-qn-GEh"/>
                         <outlet property="locationLabel" destination="vBO-R8-Fxp" id="t6y-gX-oIJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="516" y="284.5"/>
+            <point key="canvasLocation" x="511" y="274"/>
         </scene>
     </scenes>
 </document>
